# molecule-lab-backend

./: .gitignore  README.md  api.py  main.py  notebook-base.ipynb  notebook_md_rampa.ipynb  pyproject.toml
data/: bde_results.csv  optuna_resultado.json  validation_molecules.csv
results/: pairwise_comparison.csv  ranking_difference_metric.csv  ranking_validation_results.csv  ranking_validation_summary.json
src/molecule_lab/: __init__.py
src/molecule_lab/api/: app.py  registry.py  routes.py  schemas.py
src/molecule_lab/chem/: __init__.py  conversion.py  properties.py  validation.py
src/molecule_lab/core/: __init__.py  config.py  errors.py  logging.py
src/molecule_lab/simulation/: __init__.py  bde_loader.py  detection.py  detection_.py  engine.py  engine_.py  forces.py  forces_.py  integrator.py  integrator_.py  parameters.py  parameters_.py  topology.py  topology_.py
tests/: test_api.py  test_chemistry.py  test_ranking.py  test_simulation.py  validation_test.py
